2008-07-23  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: Allow owner to subscribe/get its own
	node (EJAB-705)

2008-07-24  Badlop  <badlop@process-one.net>

	* doc/guide.tex: Document room options allow_visitor_nickchange
	and allow_visitor_status (EJAB-624)
	* doc/guide.html: Likewise

2008-07-23  Geoff Cant  <geoff.cant@process-one.net>

	* src/mod_muc/mod_muc_room.erl: new room options,
	allow_visitor_presence and allow_visitor_nickchange to
	block/enable visitors to broadcast presence updates to the room
	(EJAB-624).
	* src/mod_muc/mod_muc_room.erl: renaming allow_visitor_presence to
	allow_visitor_status and altering effect (when false) to remove
	custom status tags in presence broadcasts to muc rooms by
	visitors.

2008-07-23  Christophe Romain  <christophe.romain@process-one.net>

	* src/mod_pubsub/mod_pubsub.erl: remove_user hook removes
	subscriptions (EJAB-684), send the last published and not the
	first published item (EJAB-675), remove the pubsub/nodes tree,
	subscribing to a node sends only last items (EJAB-700)
	* src/mod_pubsub/node_pep.erl: added acl and jid match on node
	creation permission (EJAB-663)
	* src/mod_pubsub/node_default.erl: fix node creation permission 
	issue for service
	* src/mod_pubsub/node_zoo.erl: Likewise

2008-07-22  Badlop  <badlop@process-one.net>

	* src/ejabberd_config.erl: If syntax mistake in config file, show
	specific error message (EJAB-616)

2008-07-22  Alexey Shchepin  <alexey@process-one.net>

	* src/odbc/odbc_queries.erl: Fixed a typo

2008-07-03  Jerome Sautret  <jerome.sautret@process-one.net>

	* src/ejabberd_ctl.erl: Call reopen_log_hook for each virtual host.

2008-07-17  Badlop  <badlop@process-one.net>

	* src/mod_muc/mod_muc_room.erl: Fix to allow a server admin to add
	himself as owner of a room (EJAB-687)

2008-07-17  Christophe Romain  <christophe.romain@process-one.net>

	* src/web/Makefile.in: use -DSSL39 if compiling with R12
